@@ -1,56 +1,45 @@
 plugins {
     kotlin("multiplatform")
+    id("com.google.devtools.ksp") version "1.6.10-1.0.2"
+}
+
+ksp {
+    arg("autoserviceKsp.verify", "true")
+    arg("autoserviceKsp.verbose", "true")
 }
 
 kotlin {
-    jvm()
-    js(BOTH).browser()
-
-    sourceSets {
-        val commonMain by getting {
-            dependencies {
-            }
+    jvm {
+        testRuns["test"].executionTask.configure {
+            useJUnitPlatform()
         }
+    }
+    js(IR) {
+        browser()
+    }.binaries.executable()
+    sourceSets {
         val jvmMain by getting {
             dependencies {
                 api(kotlin("stdlib"))
                 api(project(":core"))
-                api("com.squareup:kotlinpoet:${rootProject.ext["kotlinpoetVersion"]}")
-                api("com.squareup:kotlinpoet-classinspector-elements:${rootProject.ext["kotlinpoetVersion"]}")
-                api("com.squareup:kotlinpoet-metadata:${rootProject.ext["kotlinpoetVersion"]}")
-                api("com.squareup:kotlinpoet-metadata-specs:${rootProject.ext["kotlinpoetVersion"]}")
-                api(kotlin("reflect:1.5.0"))
-                api(kotlin("script-runtime:1.5.0"))
-//                    compileOnly("net.ltgt.gradle.incap:incap:${incap_version}")
-//                    configurations.get("kapt").dependencies.add(compileOnly("net.ltgt.gradle.incap:incap-processor:${incap_version}"))
-//                    implementation(kotlin("compiler-embeddable"))
+                implementation("com.squareup:kotlinpoet:${rootProject.ext["kotlinpoetVersion"]}")
+                implementation("com.squareup:kotlinpoet-ksp:${rootProject.ext["kotlinpoetVersion"]}")
+                implementation("com.google.devtools.ksp:symbol-processing-api:${rootProject.ext["kspVersion"]}")
+                api(kotlin("reflect:${rootProject.ext["kotlinVersion"]}"))
+                api(kotlin("script-runtime:${rootProject.ext["kotlinVersion"]}"))
+                implementation("com.google.auto.service:auto-service-annotations:${rootProject.ext["autoServiceVersion"]}")
             }
         }
 
         val jvmTest by getting {
             dependencies {
-                implementation(kotlin("test-junit"))
-                implementation("org.assertj:assertj-core:3.19.0")
+                implementation(kotlin("test-junit5"))
+                implementation("org.junit.jupiter:junit-jupiter-params:${rootProject.ext["junitJupiterParamsVersion"]}")
+                implementation("org.assertj:assertj-core:${rootProject.ext["assertJVersion"]}")
                 implementation("com.github.tschuchortdev:kotlin-compile-testing:${rootProject.ext["compileTestingVersion"]}")
+                implementation("com.github.tschuchortdev:kotlin-compile-testing-ksp:${rootProject.ext["compileTestingVersion"]}")
             }
         }
-    }
-}
-
-if (JavaVersion.current() >= JavaVersion.VERSION_16) {
-    tasks.withType<Test>().all {
-        jvmArgs(
-            "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        )
     }
 }
 
